# AIOdarr

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  res.json  run.sh
.github/workflows/: docker-build.yml
docs/plans/: 2026-02-16-discord-notifications-design.md  2026-02-16-discord-notifications.md  2026-02-19-stream-retry-design.md  2026-02-19-stream-retry.md
src/: config.py  main.py  media_processor.py  processor.py  storage.py
src/clients/: aiostreams.py  radarr.py  realdebrid.py  sonarr.py
src/notifiers/: __init__.py  discord.py
tests/: test_aiostreams.py  test_config.py  test_discord_notifier.py  test_integration.py  test_media_processor.py  test_processor.py  test_radarr.py  test_realdebrid.py  test_storage.py
